--- a/aboutus.html
+++ b/aboutus.html
@@ -254,12 +254,7 @@
               </div>
               <div class="row">
                 <div class="col">
-                  <h1 class="commit-title d-flex align-items-center justify-content-center d-flex align-items-center justify-content-center">Inclusive Pricing</h1>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="grey-line"></div>
+                  <h2 class="commit-title">Inclusive Pricing</h2>
                 </div>
               </div>
               <div class="row">
@@ -283,12 +278,7 @@
               </div>
               <div class="row">
                 <div class="col">
-                  <h1 class="commit-title d-flex align-items-center justify-content-center d-flex align-items-center justify-content-center">Delicious and Healthy Meals with Balanced Proteins</h1>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="grey-line"></div>
+                  <h2 class="commit-title">Delicious and Healthy Meals with Balanced Proteins</h2>
                 </div>
               </div>
               <div class="row">
@@ -314,12 +304,7 @@
               </div>
               <div class="row">
                 <div class="col">
-                  <h1 class="commit-title d-flex align-items-center justify-content-center d-flex align-items-center justify-content-center">From Community To Community</h1>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="grey-line"></div>
+                  <h2 class="commit-title">From Community To Community</h2>
                 </div>
               </div>
               <div class="row">
@@ -344,12 +329,7 @@
               </div>
               <div class="row">
                 <div class="col">
-                  <h1 class="commit-title d-flex align-items-center justify-content-center d-flex align-items-center justify-content-center">Empowering Local Producers</h1>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="grey-line"></div>
+                  <h2 class="commit-title">Empowering Local Producers</h2>
                 </div>
               </div>
               <div class="row">
@@ -373,12 +353,7 @@
               </div>
               <div class="row">
                 <div class="col">
-                  <h1 class="commit-title d-flex align-items-center justify-content-center">Environmentally Responsible</h1>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="grey-line"></div>
+                  <h2 class="commit-title">Environmentally Responsible</h2>
                 </div>
               </div>
               <div class="row">
@@ -401,12 +376,7 @@
               </div>
               <div class="row">
                 <div class="col">
-                  <h1 class="commit-title d-flex align-items-center justify-content-center">Health and Sustainability Education</h1>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="grey-line"></div>
+                  <h2 class="commit-title">Health and Sustainability Education</h2>
                 </div>
               </div>
               <div class="row">
@@ -420,7 +390,6 @@
             </div>
         </li>
       </ul>
-
       <button type="button" class="slider-nav"></button>
       <button type="button" class="slider-nav slider-nav-next"></button>
     </div>
