--- a/aboutus.html
+++ b/aboutus.html
@@ -86,7 +86,7 @@
   <div class="abouthead" style="background-image: url(img/Minuman/Es\ Cendol.png);">
     <div class="abouthead-overlay d-inline-flex p-2 align-items-center">
       <div class="container w-75 text-center ">
-        <h1 class="text-center">Story of Warung Hati</h1>
+        <h1 class="text-center">The Story of A Heart</h1>
       </div>
     </div>
   </div>
@@ -95,7 +95,8 @@
     <div class="container w-75 fs-5">
       <img class="img-fluid my-3 w-75 mx-auto d-block" src="img/aboutus/Healthy Food Education to Youngsters 3.jpg">
       <div class="text-center ">
-        <p>At Warung Hati, we're more than a catering service; we're a journey driven by passion and purpose.
+        <p>“Hati” means heart. It means we pour our hearts into every dish we create, and everything we do. at Warung
+          Hati, we're more than a catering service; we're a journey driven by passion and purpose.
           Our story began in January 2017, when Farid, a passionate health activist in Surabaya, embarked on a mission
           to
           bring health and wellness to the heart of our community.</p>
@@ -249,31 +250,7 @@
             <div class="container commit-card">
               <div class="row">
                 <div class="col">
-                  <img src="img/aboutus/Healthy Food Donation to Orphanage.jpg" class="commit-img">
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <h2 class="commit-title">Inclusive Pricing</h2>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <p>We understand the concern about high prices for healthy food. By using local
-                    ingredients, we offer diverse product ranges. Our "Buy 1, Give 1" program every Friday enables
-                    customers to share healthy meals with underprivileged people, ensuring everyone can savor the
-                    goodness of healthy food</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </li>
-        <li class="slide-visible">
-          <div id="slide2">
-            <div class="container commit-card">
-              <div class="row">
-                <div class="col">
-                  <img src="img/aboutus/Healthy Food Education to Youngsters 3.jpg" class="commit-img">
+                  <img src="img/aboutus/Seminar about Food and Its Impact.jpg" class="commit-img">
                 </div>
               </div>
               <div class="row">
@@ -283,7 +260,7 @@
               </div>
               <div class="row">
                 <div class="col">
-                  <p>“Hati” means heart. It means we pour our hearts into every dish we create. Research confirms that
+                  <p>Research confirms that
                     healthy food can uplift mood, and we're dedicated to making healthy synonymous with delicious. We
                     advocate a diet comprising 85% plant-based and 15% meat protein by meticulously choosing
                     non-saturated fats and organic protein sources to harmonize well-being and environmental
@@ -291,9 +268,10 @@
                 </div>
               </div>
             </div>
+          </div>
         </li>
         <li class="slide-visible">
-          <div id="slide3">
+          <div id="slide2">
             <div class="container commit-card">
               <div class="row">
                 <div class="col">
@@ -317,10 +295,9 @@
                 </div>
               </div>
             </div>
-          </div>
         </li>
-        <li class="">
-          <div id="slide4">
+        <li class="slide-visible">
+          <div id="slide3">
             <div class="container commit-card">
               <div class="row">
                 <div class="col">
@@ -338,6 +315,29 @@
                     farmers and producers across Indonesia. Brown rice from Banyuwangi, vegetables from Mojokerto, and
                     sea salt from Bali, we bring all the goodness from all around Indonesia’s archipelago. Organic
                     ingredients are preferred whenever possible</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="">
+          <div id="slide4">
+            <div class="container commit-card">
+              <div class="row">
+                <div class="col">
+                  <img src="img/aboutus/Healthy Food Donation to Orphanage.jpg" class="commit-img">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h2 class="commit-title">Inclusive Pricing</h2>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <p>We understand the concern about high prices for healthy food. By using local ingredients, we offer
+                    diverse product ranges. Our "Buy 1, Give 1" program every Friday enables customers to share healthy
+                    meals with underprivileged people, ensuring everyone can savor the goodness of healthy food.</p>
                 </div>
               </div>
             </div>
@@ -371,7 +371,7 @@
             <div class="container commit-card">
               <div class="row">
                 <div class="col">
-                  <img src="img/aboutus/Seminar about Food and Its Impact.jpg" class="commit-img">
+                  <img src="img/aboutus/Healthy Food Education to Youngsters 1.JPG" class="commit-img">
                 </div>
               </div>
               <div class="row">
