--- a/mealplans.html
+++ b/mealplans.html
@@ -90,7 +90,7 @@
     <!-- Header end -->
     <!-- Content -->
     <div class="container my-4">
-        <div class="row row-cols-1 row-cols-md-4">
+        <div class="row row-cols-1 row-cols-md-4 gy-3 gy-md-0">
             <div class="col">
                 <div class="container text-center card-plan">
                     <img class="img-plans" style="object-position: 70% 50%;" src="img/Menu_Utama/Nasi Pecel 2.png">
