--- a/menu.html
+++ b/menu.html
@@ -739,8 +739,9 @@
               <img src="img/Perayaan/Nasi Bancaan.png" class="card-img-top" style="object-position: 50% 75%;">
               <div class="card-body">
                 <h2 class="card-title">Nasi Bancaan</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, id possimus?
-                  Qui, quos!.</p>
+                <p class="card-text">A festival of flavors on one plate. Nutty brown/red rice accompanied by aromatic
+                  rempah, grilled chicken/fish, curry tofu and tempe, and a fiery sambal. A celebration of Indonesia's
+                  culinary artistry.</p>
               </div>
             </div>
           </div>
@@ -749,8 +750,9 @@
               <img src="img/Perayaan/Nasi Kuning 3.png" class="card-img-top" style="object-position: 50% 75%;">
               <div class="card-body">
                 <h2 class="card-title">Nasi Kuning</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, id possimus?
-                  Qui, quos!.</p>
+                <p class="card-text">A golden tribute to tradition. Turmeric-infused rice, caramelized tempe, coconut
+                  oil-fried chicken, serundeng, and sambal. A harmonious feast that embodies the spirit of festivities
+                  in every bite</p>
               </div>
             </div>
           </div>
