Replacing line heigh

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <h1 class="display-1 fw-bolder text-capitalize">Nasi Timbel</h1>
               <div class="desk">
                 <hr>
-                <p class="fs-5">A whole food meal from Sundanese consisting of Sayur Asem, sambal, ungkep kampong
+                <p class="">A whole food meal from Sundanese consisting of Sayur Asem, sambal, ungkep kampong
                   chicken, and organic rice wrapped with banana leaves</p>
               </div>
             </div>
@@ -143,7 +143,7 @@
               <h1 class="display-1 fw-bolder text-capitalize">Gado-Gado</h1>
               <div class="desk">
                 <hr>
-                <p class="fs-5">A mix of steamed and raw vegetables, fried tofu, and boiled egg, with creamy
+                <p class="">A mix of steamed and raw vegetables, fried tofu, and boiled egg, with creamy
                   sweet-savory cashew dressing. Javanese Island's most popular salad! Every city in Java has its style
                   of this salad but with one similarity: delicious!</p>
               </div>
@@ -157,7 +157,7 @@
               <h1 class="display-1 fw-bolder text-capitalize">Gudeg Jogja</h1>
               <div class="desk">
                 <hr>
-                <p class="fs-5">Unlock Java's heart with sweetly stewed young jackfruit. A fragrant blend of coconut
+                <p class="">Unlock Java's heart with sweetly stewed young jackfruit. A fragrant blend of coconut
                   milk, palm sugar, and spices weaves a captivating tale of flavors.
                 </p>
               </div>
@@ -172,7 +172,7 @@
               <h1 class="display-1 fw-bolder text-capitalize">Jajanan Pasar</h1>
               <div class="desk">
                 <hr>
-                <p class="fs-5">Delight in Jajan Pasar's treasures. Assorted traditional sweets showcase Indonesia's
+                <p class="">Delight in Jajan Pasar's treasures. Assorted traditional sweets showcase Indonesia's
                   culinary heritage, embodying flavors that enchant generations</p>
               </div>
             </div>
@@ -186,7 +186,7 @@
               <h1 class="display-1 fw-bolder text-capitalize">Es Cendol</h1>
               <div class="desk">
                 <hr>
-                <p class="fs-5">Layers of joy—pandan rice boba, coconut milk, and palm sugar syrup. An icy indulgence
+                <p class="">Layers of joy—pandan rice boba, coconut milk, and palm sugar syrup. An icy indulgence
                   that's sweet, creamy, and utterly refreshing.</p>
               </div>
             </div>
@@ -214,8 +214,8 @@
             contact us using the form beside or contact on below. We are ready to assist you with pleasure!</p>
           <div class="container text-md-center">
             <ul>
-              <li><i class="bi-telephone-fill contact-icon"></i> Simo Gunung Barat Tol 3/22D</li>
-              <li><i class="bi-envelope contact-icon"></i> Simo Gunung Barat Tol 3/22D</li>
+              <li><i class="bi-telephone-fill contact-icon"></i> +1 23456789</li>
+              <li><i class="bi-envelope contact-icon"></i>Jalan Jalan saja</li>
             </ul>
           </div>
         </div>
