--- a/aboutus.html
+++ b/aboutus.html
@@ -92,8 +92,8 @@
   </div>
   <!--End of Hero-->
   <div class="my-5">
-    <div class="container w-75 fs-5">
-      <img class="img-fluid my-3 w-75 mx-auto d-block" src="img/aboutus/Healthy Food Education to Youngsters 3.jpg">
+    <img class="img-fluid my-3 mx-auto d-block" src="img/aboutus/Healthy Food Education to Youngsters 3.jpg">
+    <div class="container w-75">
       <div class="text-center ">
         <p>“Hati” means heart. It means we pour our hearts into every dish we create, and everything we do. at Warung
           Hati, we're more than a catering service; we're a journey driven by passion and purpose.
