--- a/aboutus.html
+++ b/aboutus.html
@@ -250,7 +250,7 @@
             <div class="container commit-card">
               <div class="row">
                 <div class="col">
-                  <img src="img/aboutus/Seminar about Food and Its Impact.jpg" class="commit-img">
+                  <img src="img/Menu_Utama/" class="commit-img">
                 </div>
               </div>
               <div class="row">
