--- a/mealplans.html
+++ b/mealplans.html
@@ -96,25 +96,18 @@
                     <img class="img-plans" style="object-position: 70% 50%;" src="img/Menu_Utama/Nasi Pecel 2.png">
                     <h1 class="my-2 text-center title-plan">Sapu Jagad</h1>
                     <p class="desk-plan">Selection of healthy meals to support the immune system and improve stamina</p>
-                    <h3>Goal :</h3>
+                    <h3>Goal </h3>
                     <p class="desk-plan">Immune booster, increase energy and stamina</p>
-                    <h3>Menu :</h3>
+                    <h3>Menu </h3>
                     <p class="desk-plan">Nasi Pecel Kacang Mente with Organic Tempeh Bacem</p>
-                    <h3>Include : </h3>
+                    <h3>Include </h3>
                     <ul class="list-group my-2">
                         <li class="list-group-item">6 days package</li>
                         <li class="list-group-item">2 healthy main course</li>
                         <li class="list-group-item">1 healthy beverage (cold-pressed juice or smoothies)</li>
                         <li class="list-group-item">1.500 calories/day</li>
                     </ul>
-                    <div class="row text-start mt-3">
-                        <div class="col">
-                            <h3>Price :</h3>
-                        </div>
-                        <div class="col">
-                            <h3 class="text-white">Rp300.000</h3>
-                        </div>
-                    </div>
+                    <h3 class="text-white">Rp300.000</h3>
                 </div>
             </div>
             <div class="col">
@@ -125,25 +118,19 @@
                         <p class="desk-plan">Specially designed for those who are on their healing journey from certain
                             health conditions
                         </p>
-                        <h3>Goal :</h3>
+                        <h3>Goal </h3>
                         <p class="desk-plan">Detoxification, hormone balancing, and healing </p>
-                        <h3>Menu :</h3>
+                        <h3>Menu </h3>
                         <p class="desk-plan">Ketoprak bumbu mente with steamed organic tofu, tempeh, and boiled egg</p>
-                        <h3>Include : </h3>
+                        <h3>Include  </h3>
                         <ul class="list-group my-2">
                             <li class="list-group-item">6 days package</li>
                             <li class="list-group-item">2 healthy main course</li>
                             <li class="list-group-item">1 healthy beverage (cold-pressed juice or smoothies)</li>
                             <li class="list-group-item">1.300 calories/day</li>
                         </ul>
-                        <div class="row text-start mt-3">
-                            <div class="col">
-                                <h3>Price :</h3>
-                            </div>
-                            <div class="col">
-                                <h3 class="text-white">Rp600.000</h3>
-                            </div>
-                        </div>
+                        <h3 class="text-white">Rp600.000</h3>
+
                     </div>
                 </div>
             </div>
@@ -157,26 +144,19 @@
                         </p>
                         <!-- <p class="desk-plan">An delicious plan for weight loss, detoxification, better fullness and
                             reduce craving for unhealthy food</p> -->
-                        <h3>Goal :</h3>
+                        <h3>Goal </h3>
                         <p class="desk-plan">Weight loss, increased fullness, detoxification, and reduced craving for
                             unhealthy food</p>
-                        <h3>Menu :</h3>
+                        <h3>Menu </h3>
                         <p class="desk-plan">Gado-gado bumbu kenari with organic tofu and omega egg</p>
-                        <h3>Include : </h3>
+                        <h3>Include  </h3>
                         <ul class="list-group my-2">
                             <li class="list-group-item">6 days package</li>
                             <li class="list-group-item">2 healthy main course</li>
                             <li class="list-group-item">1 healthy beverage (cold-pressed juice or smoothies)</li>
                             <li class="list-group-item">1.200 calories/day</li>
                         </ul>
-                        <div class="row text-start mt-3">
-                            <div class="col">
-                                <h3>Price :</h3>
-                            </div>
-                            <div class="col">
-                                <h3 class="text-white">Rp600.000</h3>
-                            </div>
-                        </div>
+                        <h3 class="text-white">Rp600.000</h3>
                     </div>
                 </div>
             </div>
@@ -190,11 +170,11 @@
                         </p>
                         <!-- <p class="desk-plan">The best nutrient-dense tool for support pregnant and breastfeeding mother
                         </p> -->
-                        <h3>Goal :</h3>
+                        <h3>Goal </h3>
                         <p class="desk-plan">Nutrition booster, ASI booster, and post-birth care </p>
-                        <h3>Menu :</h3>
+                        <h3>Menu </h3>
                         <p class="desk-plan">Nasi timbel beras merah with Sundanese sayur asem and ungkep chicken</p>
-                        <h3>Include : </h3>
+                        <h3>Include </h3>
                         <ul class="list-group my-2">
                             <li class="list-group-item">6 days package</li>
                             <li class="list-group-item">2 healthy main course</li>
@@ -202,14 +182,7 @@
                             <li class="list-group-item">2 healthy desserts/appetizers</li>
                             <li class="list-group-item">1.600 - 1.800 calories/day</li>
                         </ul>
-                        <div class="row text-start mt-3">
-                            <div class="col">
-                                <h3>Price :</h3>
-                            </div>
-                            <div class="col">
-                                <h3 class="text-white">Rp800.000</h3>
-                            </div>
-                        </div>
+                        <h3 class="text-white">Rp800.000</h3>
                     </div>
                 </div>
             </div>
