--- a/aboutus.html
+++ b/aboutus.html
@@ -250,7 +250,7 @@
             <div class="container commit-card">
               <div class="row">
                 <div class="col">
-                  <img src="img/Menu_Utama/" class="commit-img">
+                  <img src="img/Menu_Utama/Nasi Campur Bali.png" class="commit-img">
                 </div>
               </div>
               <div class="row">
@@ -399,7 +399,7 @@
   <footer class="footer pt-3">
     <div class="container">
       <div class="row">
-        <div class="col-5">
+        <div class="col-3">
           <h4>Warung Hati</h4>
         </div>
         <div class="col text-end">
