--- a/aboutus.html
+++ b/aboutus.html
@@ -264,7 +264,7 @@
                     healthy food can uplift mood, and we're dedicated to making healthy synonymous with delicious. We
                     advocate a diet comprising 85% plant-based and 15% meat protein by meticulously choosing
                     non-saturated fats and organic protein sources to harmonize well-being and environmental
-                    sustainability</p>
+                    sustainability.</p>
                 </div>
               </div>
             </div>
@@ -291,7 +291,7 @@
                     that thriving in business means working hand-in-hand with communities. We empower underprivileged
                     women by offering them opportunities and enhancing their skills. When these women earn, they invest
                     in their children's education, breaking the cycle of poverty and ensuring a brighter future,
-                    positioning them as equal providers for their families</p>
+                    positioning them as equal providers for their families.</p>
                 </div>
               </div>
             </div>
@@ -314,7 +314,7 @@
                   <p>Farm to table. We are proudly using 100% indigenous and natural ingredients from local nearby
                     farmers and producers across Indonesia. Brown rice from Banyuwangi, vegetables from Mojokerto, and
                     sea salt from Bali, we bring all the goodness from all around Indonesia’s archipelago. Organic
-                    ingredients are preferred whenever possible</p>
+                    ingredients are preferred whenever possible.</p>
                 </div>
               </div>
             </div>
@@ -360,7 +360,7 @@
                 <div class="col">
                   <p>Nourishing the body while saving the world is our pledge. We utilize all-natural, biodegradable
                     products in our operations, from cassava-based takeaway bags to eco-friendly dishwashing liquid. We
-                    also encourage customers to bring their containers</p>
+                    also encourage customers to bring their containers.</p>
                 </div>
               </div>
             </div>
@@ -384,7 +384,7 @@
                   <p>The future of our planet rests in the hands of today's and the next generation. We nurture the
                     value of health and sustainability through engaging educational experiences for them. From the
                     vibrant farmer's markets to hands-on cooking classes and inspiring campaigns promoting wholesome
-                    local food, we savor knowledge and embrace healthier, more sustainable living</p>
+                    local food, we savor knowledge and embrace healthier, more sustainable living.</p>
                 </div>
               </div>
             </div>
