--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             Warung Hati's
             cuisine. Our menu is crafted with indigenous herbs, spices, and natural ingredients that have been passed
             down from our ancestors. We believe that this wisdom is the key to achieving the balance between humans and
-            nature, and is also the secret to prime health and longevity</p>
+            nature, and is also the secret to prime health and longevity.</p>
         </div>
       </div>
     </div>
@@ -130,7 +130,7 @@
               <div class="desk">
                 <hr>
                 <p class="">A whole food meal from Sundanese consisting of Sayur Asem, sambal, ungkep kampong
-                  chicken, and organic rice wrapped with banana leaves</p>
+                  chicken, and organic rice wrapped with banana leaves.</p>
               </div>
             </div>
           </div>
@@ -173,7 +173,7 @@
               <div class="desk">
                 <hr>
                 <p class="">Delight in Jajan Pasar's treasures. Assorted traditional sweets showcase Indonesia's
-                  culinary heritage, embodying flavors that enchant generations</p>
+                  culinary heritage, embodying flavors that enchant generations.</p>
               </div>
             </div>
           </div>
