--- a/aboutus.html
+++ b/aboutus.html
@@ -91,7 +91,7 @@
     </div>
   </div>
   <!--End of Hero-->
-  <div class="my-5">
+  <div class="my-5 my-sm-0">
     <img class="img-fluid my-3 mx-auto d-block" src="img/aboutus/Healthy Food Education to Youngsters 3.jpg">
     <div class="container w-75">
       <div class="text-center ">
