--- a/menu.html
+++ b/menu.html
@@ -81,7 +81,7 @@
   </div>
   <!--End of Navbar-->
   <!--Tabs of category-->
-  <div class="abouthead" style="background-image: url(./img/Front_Page/JajanPasar.png);">
+  <div class="abouthead" style="background-image: url(./img/Menu_Utama/Nasi\ Gudeg\ Jogja.png); object-position: 30% 80%;">
     <div class="abouthead-overlay d-inline-flex p-2 align-items-center">
       <div class="container text-center ">
         <h1 class="text-center">Warung Hati Greatest Creation</h1>
@@ -690,7 +690,7 @@
           </div>
           <div class="col">
             <div class="card food-card">
-              <img src="img/Minuman/Es Cendol.png" class="card-img-top" style="object-position: 50% 75%;">
+              <img src="img/Minuman/Es Dawet 4.png" class="card-img-top img-fluid" style="object-position: 50% 75%; height: 100%;">
               <div class="card-body">
                 <h2 class="card-title">Es Cendol Dawet</h2>
                 <p class="card-text">Tropical paradise in a glass. Avocado, jackfruit, and coconut meat, drenched in
