Dev mobile version

--- a/index.html
+++ b/index.html
@@ -90,10 +90,16 @@
 
   <!--Quick About us-->
   <div class="container my-5">
-    <div class="row g-0">
+    <div class="row gx-1">
       <div class="col-md-6 text-center">
-        <img src="img/Menu_Utama/Gado-Gado 3.png" style="object-position: 65%;" class="img-rest">
-        <img src="img/5. Ala Carte/Sayur/Sayur Asem.png" class="img-rest-2">
+        <div class="row gx-0 gx-md-1">
+          <div class="col">
+            <img src="img/5. Ala Carte/Sayur/Sayur Sop.png" class="img-rest">
+          </div>
+          <div class="col">
+            <img src="img//Minuman/Es Kuwut Bali(1).png" style="" class="img-rest-2">
+          </div>
+        </div>
       </div>
       <div class="col-md-6 align-self-center">
         <div class="container mt-3 mt-md-0">
