--- a/menu.html
+++ b/menu.html
@@ -81,10 +81,10 @@
   </div>
   <!--End of Navbar-->
   <!--Tabs of category-->
-  <div class="abouthead" style="background-image: url(./img/Menu_Utama/Nasi\ Gudeg\ Jogja.png); object-position: 30% 80%;">
+  <div class="abouthead" style="background-image: url(./img/Front_Page/JajanPasar.png); object-position: 30% 80%;">
     <div class="abouthead-overlay d-inline-flex p-2 align-items-center">
-      <div class="container text-center ">
-        <h1 class="text-center">Warung Hati Greatest Creation</h1>
+      <div class="container text-center">
+        <h1 class="text-center">Warung Hati's Greatest Creation</h1>
         <div class="container d-none d-md-block d-lg-block d-xl-block d-xxl-block mt-3">
           <ul class="nav nav-colorfirst justify-content-center mt-3" id="Food-Tab">
             <li class="nav-item">
@@ -119,7 +119,7 @@
             </li>
           </ul>
         </div>
-        <div class="container d-md-none d-lg-none d-xl-none d-xxl-none">
+        <div class="container d-block d-md-none d-lg-none d-xl-none d-xxl-none">
           <select class="form-select" id="Food-tab" aria-label="Navigation for category">
             <option value="#primary" data-bs-toggle="tab" selected>Main</option>
             <option value="#snack" data-bs-toggle="tab">Snack</option>
@@ -136,7 +136,7 @@
   <div class="tab-content my-5">
     <div class="tab-pane active show" id="primary">
       <div class="container">
-        <div class="row row-cols-1 row-cols-md-4 g-4">
+        <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 g-4">
           <div class="col">
             <div class="card food-card">
               <img src="img/Menu_Utama/Asinan Betawi.png" class="card-img-top" style="object-position: 50% 75%;">
@@ -369,9 +369,10 @@
             <div class="card food-card">
               <img src="img/Jajanan/Lupis Ketan.png" class="card-img-top" style="object-position: 50% 75%;">
               <div class="card-body">
-                <h2 class="card-title">Lupis Ketan</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, id possimus?
-                  Qui, quos!.</p>
+                <h2 class="card-title">Lopis Ketan</h2>
+                <p class="card-text">A festival favorite. Chewy savory glutinous rice cakes infused with palm sugar,
+                  coated in coconut flakes, and a hint of aromatic pandan. Perfect for celebrations or everyday snacks.
+                </p>
               </div>
             </div>
           </div>
@@ -593,9 +594,8 @@
             <div class="card food-card">
               <img src="img/5. Ala Carte/Sayur/Oncom Leunca.png" class="card-img-top" style="object-position: 50% 75%;">
               <div class="card-body">
-                <h2 class="card-title">Oncom</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, id possimus?
-                  Qui, quos!.</p>
+                <h2 class="card-title">Tumis Oncom Leunca</h2>
+                <p class="card-text">Savory oncom "fermented soy cake" and crunchy leunca "black nightshade" stir-fried with garlic, chili, and a medley of spices. A satisfying umami explosion</p>
               </div>
             </div>
           </div>
@@ -690,7 +690,7 @@
           </div>
           <div class="col">
             <div class="card food-card">
-              <img src="img/Minuman/Es Dawet 4.png" class="card-img-top img-fluid" style="object-position: 50% 75%; height: 100%;">
+              <img src="img/Minuman/Es Dawet 2.png" class="card-img-top">
               <div class="card-body">
                 <h2 class="card-title">Es Cendol Dawet</h2>
                 <p class="card-text">Tropical paradise in a glass. Avocado, jackfruit, and coconut meat, drenched in
