--- a/aboutus.html
+++ b/aboutus.html
@@ -83,19 +83,20 @@
   </div>
   <!--End of Navbar-->
   <!--Hero start-->
-  <div class="abouthead" style="background-image: url(img/Minuman/Es\ Cendol.png);">
+  <!-- <div class="abouthead" style=" background-image: url(img/aboutus/Healthy\ Food\ Education\ to\ Youngsters\ 2.jpg); ">
     <div class="abouthead-overlay d-inline-flex p-2 align-items-center">
       <div class="container w-75 text-center ">
         <h1 class="text-center">The Story of A Heart</h1>
       </div>
     </div>
-  </div>
+  </div> -->
   <!--End of Hero-->
   <div class="my-5 my-sm-0">
-    <img class="img-fluid my-3 mx-auto d-block" src="img/aboutus/Healthy Food Education to Youngsters 3.jpg">
+    <img class="my-3 mx-auto d-block" src="img/aboutus/Healthy Food Education to Youngsters 3.jpg" style="margin-top: 2cm !important;  height: 79dvh;">
+    <h1 class="text-center mb-3">The Story of "Hati"</h1>
     <div class="container w-75">
       <div class="text-center ">
-        <p>“Hati” means heart. It means we pour our hearts into every dish we create, and everything we do. at Warung
+        <p>In Bahasa, “Hati” means heart. It means we pour our hearts into every dish we create, and everything we do. at Warung
           Hati, we're more than a catering service; we're a journey driven by passion and purpose.
           Our story began in January 2017, when Farid, a passionate health activist in Surabaya, embarked on a mission
           to
