--- a/mealplans.html
+++ b/mealplans.html
@@ -90,7 +90,7 @@
     <!-- Header end -->
     <!-- Content -->
     <div class="container my-4">
-        <div class="row row-cols-1 row-cols-md-4 gy-3 gy-md-0">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 gy-3">
             <div class="col">
                 <div class="container text-center card-plan">
                     <img class="img-plans" style="object-position: 70% 50%;" src="img/Menu_Utama/Nasi Pecel 2.png">
@@ -107,7 +107,7 @@
                         <li class="list-group-item">1 healthy beverage (cold-pressed juice or smoothies)</li>
                         <li class="list-group-item">1.500 calories/day</li>
                     </ul>
-                    <h3 class="text-white">Rp300.000</h3>
+                    <h3 class="text-white">Rp600.000</h3>
                 </div>
             </div>
             <div class="col">
