Change size header

--- a/aboutus.html
+++ b/aboutus.html
@@ -94,8 +94,8 @@
   <div class="my-5 my-sm-0">
     <img class="my-3 mx-auto d-block" src="img/aboutus/Healthy Food Education to Youngsters 3.jpg" style="margin-top: 2cm !important;  height: 79dvh;">
     <h1 class="text-center mb-3">The Story of "Hati"</h1>
-    <div class="container w-75">
-      <div class="text-center ">
+    <div class="container">
+      <div class="abouttext">
         <p>In Bahasa, “Hati” means heart. It means we pour our hearts into every dish we create, and everything we do. at Warung
           Hati, we're more than a catering service; we're a journey driven by passion and purpose.
           Our story began in January 2017, when Farid, a passionate health activist in Surabaya, embarked on a mission
