--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
   <!--End of Hero-->
 
   <!--Quick About us-->
-  <div class="container my-5">
-    <div class="row gx-1">
+  <div class="container my-4">
+    <div class="row">
       <div class="col-md-6 text-center">
         <div class="row gx-0 gx-md-1">
           <div class="col">
             <img src="img/5. Ala Carte/Sayur/Sayur Sop.png" class="img-rest">
           </div>
           <div class="col">
-            <img src="img//Minuman/Es Kuwut Bali(1).png" style="" class="img-rest-2">
+            <img src="img//Minuman/Es Kuwut Bali(1).png" class="img-rest-2">
           </div>
         </div>
       </div>
@@ -116,7 +116,7 @@
   </div>
   <!--End Quick about us-->
   <!--Best Pick-->
-  <div class="my-5">
+  <div class="mt-3">
     <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true"
