--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
             contact us using the form beside or contact on below. We are ready to assist you with pleasure!</p>
           <div class="container text-md-center">
             <ul>
-              <li><i class="bi-telephone-fill contact-icon"></i> +1 23456789</li>
-              <li><i class="bi-envelope contact-icon"></i>Jalan Jalan saja</li>
+              <li><i class="bi-telephone-fill contact-icon"></i>+6285333499996</li>
+              <li><i class="bi-envelope contact-icon"></i>warunghati.id@gmail.com</li>
             </ul>
           </div>
         </div>
