--- a/menu.html
+++ b/menu.html
@@ -85,7 +85,7 @@
     <div class="abouthead-overlay d-inline-flex p-2 align-items-center">
       <div class="container text-center">
         <h1 class="text-center">Warung Hati's Greatest Creation</h1>
-        <div class="container d-none d-md-block d-lg-block d-xl-block d-xxl-block mt-3">
+        <div class="container d-none d-lg-block d-xl-block d-xxl-block mt-3">
           <ul class="nav nav-colorfirst justify-content-center mt-3" id="Food-Tab">
             <li class="nav-item">
               <a href="#primary" class="nav-link active" data-bs-toggle="tab">
@@ -119,7 +119,7 @@
             </li>
           </ul>
         </div>
-        <div class="container d-block d-md-none d-lg-none d-xl-none d-xxl-none">
+        <div class="container d-block d-md-block d-lg-none d-xl-none d-xxl-none mt-5">
           <select class="form-select" id="Food-tab" aria-label="Navigation for category">
             <option value="#primary" data-bs-toggle="tab" selected>Main</option>
             <option value="#snack" data-bs-toggle="tab">Snack</option>
@@ -595,7 +595,8 @@
               <img src="img/5. Ala Carte/Sayur/Oncom Leunca.png" class="card-img-top" style="object-position: 50% 75%;">
               <div class="card-body">
                 <h2 class="card-title">Tumis Oncom Leunca</h2>
-                <p class="card-text">Savory oncom "fermented soy cake" and crunchy leunca "black nightshade" stir-fried with garlic, chili, and a medley of spices. A satisfying umami explosion</p>
+                <p class="card-text">Savory oncom "fermented soy cake" and crunchy leunca "black nightshade" stir-fried
+                  with garlic, chili, and a medley of spices. A satisfying umami explosion</p>
               </div>
             </div>
           </div>
@@ -710,7 +711,18 @@
           </div>
           <div class="col">
             <div class="card food-card">
-              <img src="img/Minuman/Es Puter.png" class="card-img-top" style="object-position: 50% 75%;">
+              <img src="img/Minuman/Es Kuwut Bali(1).png" class="card-img-top">
+              <div class="card-body">
+                <h2 class="card-title">Es Kuwut Bali</h2>
+                <p class="card-text">A tropical symphony in a glass. Shredded young coconut, refreshing melon, crisp
+                  cucumber, zesty lime, and fragrant selasih and mint. A sweet and tangy sensation with delightful
+                  textures, capturing the essence of Bali</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card food-card">
+              <img src="img/Minuman/Es Puter 2.png" class="card-img-top" style="object-position: 50% 75%;">
               <div class="card-body">
                 <h2 class="card-title">Es Puter</h2>
                 <p class="card-text">Creamy coconut ice cream, a taste of pure indulgence. Treat yourself to the smooth
