Pindah p sama titik

--- a/aboutus.html
+++ b/aboutus.html
@@ -92,27 +92,29 @@
   </div> -->
   <!--End of Hero-->
   <div class="my-5 my-sm-0">
-    <img class="my-3 mx-auto d-block" src="img/aboutus/Healthy Food Education to Youngsters 3.jpg" style="margin-top: 2cm !important;  height: 79dvh;">
+    <img class="my-3 mx-auto d-block" src="img/aboutus/Healthy Food Education to Youngsters 3.jpg"
+      style="margin-top: 2cm !important;  height: 79dvh;">
     <h1 class="text-center mb-3">The Story of "Hati"</h1>
     <div class="container">
       <div class="abouttext">
-        <p>In Bahasa, “Hati” means heart. It means we pour our hearts into every dish we create, and everything we do. at Warung
+        <p>In Bahasa, “Hati” means heart. It means we pour our hearts into every dish we create, and everything we do.
+          at Warung
           Hati, we're more than a catering service; we're a journey driven by passion and purpose.
           Our story began in January 2017, when Farid, a passionate health activist in Surabaya, embarked on a mission
           to
           bring health and wellness to the heart of our community.</p>
-        <p>
-          Before the birth of Warung Hati, Farid was a co-founder of the Surabaya Sehat Community, a community that aims
-          to promote healthy lifestyles in the city. There, he shared his love for wholesome, healthy foods at the
-          monthly
-          Pasar Sehat, a vibrant monthly farmers market dedicated to promoting healthy and eco-friendly products.
-        </p>
         <p>
           Warung Hati emerged as a response to the growing health challenges faced by Indonesia, particularly the rise
           of
           non-communicable diseases. Farid believes that food possesses a profound ability to not only transform
           individual health and well-being but also to improve environmental sustainability and the welfare of our local
           farmers and community.
+        </p>
+        <p>
+          Before the birth of Warung Hati, Farid was a co-founder of the Surabaya Sehat Community, a community that aims
+          to promote healthy lifestyles in the city. There, he shared his love for wholesome, healthy foods at the
+          monthly
+          Pasar Sehat, a vibrant monthly farmers market dedicated to promoting healthy and eco-friendly products.
         </p>
       </div>
     </div>
