--- a/mealplans.html
+++ b/mealplans.html
@@ -95,7 +95,7 @@
                 <div class="container text-center card-plan">
                     <img class="img-plans" style="object-position: 70% 50%;" src="img/Menu_Utama/Nasi Pecel 2.png">
                     <h1 class="my-2 text-center title-plan">Sapu Jagad</h1>
-                    <p class="desk-plan">Selection of healthy meals to support the immune system and improve stamina</p>
+                    <p class="desk-plan">Selection of healthy meals to support the immune system and improve stamina.</p>
                     <h3>Goal </h3>
                     <p class="desk-plan">Immune booster, increase energy and stamina</p>
                     <h3>Menu </h3>
@@ -116,7 +116,7 @@
                         <img class="img-plans" style="object-position: 20% 50%;" src="img/Jajanan/Ketoprak(1).png">
                         <h1 class="my-2 text-center title-plan">Seger Waras</h1>
                         <p class="desk-plan">Specially designed for those who are on their healing journey from certain
-                            health conditions
+                            health conditions.
                         </p>
                         <h3>Goal </h3>
                         <p class="desk-plan">Detoxification, hormone balancing, and healing </p>
@@ -140,7 +140,7 @@
                         <img class="img-plans" style="object-position: 75% 50%;" src="img/Menu_Utama/Gado-Gado 3.png">
                         <h1 class="my-2 text-center title-plan">SingSet</h1>
                         <p class="desk-plan">Who says weight loss should be dull and agonizing? Our singset menu will
-                            indulge your tongue and make the body's goals journey fun
+                            indulge your tongue and make the body's goals journey fun.
                         </p>
                         <!-- <p class="desk-plan">An delicious plan for weight loss, detoxification, better fullness and
                             reduce craving for unhealthy food</p> -->
